--- a/堆.ipynb
+++ b/堆.ipynb
@@ -22,7 +22,13 @@
     "- [详解数据结构——堆-知乎](https://zhuanlan.zhihu.com/p/85518062)\n",
     "- [Python堆的基本用法](https://blog.csdn.net/weixin_44731100/article/details/106214614)\n",
     "- [堆的妙用-力扣](https://leetcode.cn/circle/article/M47Vpo/)\n",
-    "- [宫水三叶-堆-github](https://github.com/SharingSource/LogicStack-LeetCode/wiki/%E5%A0%86)"
+    "- [宫水三叶-堆-github](https://github.com/SharingSource/LogicStack-LeetCode/wiki/%E5%A0%86)\n",
+    "\n",
+    "`import heapq`\n",
+    "\n",
+    "- `heapq.heappush(vec, num)`: return Nothing\n",
+    "- `heapq.heappop(vec)`: return the top item\n",
+    "- `heapq.heapify(vec)`: return Nothing, the vec itself will be heapified"
    ]
   },
   {
