--- a/散列表Hash.ipynb
+++ b/散列表Hash.ipynb
@@ -21,7 +21,10 @@
     "- https://www.jianshu.com/p/67b825e08d17\n",
     "- https://zhuanlan.zhihu.com/p/63142005\n",
     "- https://leetcode-cn.com/tag/hash-table/problemset/\n",
-    "- https://blog.csdn.net/Avery123123/article/details/103583115"
+    "- https://blog.csdn.net/Avery123123/article/details/103583115\n",
+    "\n",
+    "`from collections import Counter`\n",
+    "`Counter()`"
    ]
   },
   {
