tree, graph, dp

--- a/树和图（一：树）.ipynb
+++ b/树和图（一：树）.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 大纲\n",
     "\n",
-    "2022/05/22-\n",
+    "2022/05/22-05/29\n",
     "\n",
     "- [X] 树的基本知识点\n",
     "    - [x] 表示和存储\n",
@@ -18,11 +18,10 @@
     "    - [X] 后序遍历\n",
     "    - [X] 三者之间的关系\n",
     "- [X] 深搜和广搜算法实现\n",
-    "- [ ] 迭代方法的专项练习\n",
-    "- [ ] 时空复杂度分析\n",
-    "- [ ] leetcode经典例题\n",
-    "- [ ] 我的总结\n",
-    "- [ ] 现实应用\n",
+    "- [X] 迭代方法的专项练习\n",
+    "- [X] 时空复杂度分析\n",
+    "- [X] leetcode经典例题\n",
+    "- [X] 我的总结\n",
     "\n",
     "\n",
     "参考链接：\n",
@@ -600,13 +599,13 @@
     "- [(medium)105Construct Binary Tree From Preorder And Inorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)\n",
     "    - 思路一：递归构造，每次在中序中找到当前根节点的位置，再左右子树递归构造。时间复杂度最坏情况是O(n^2)，当只有左子树的时候。耗时的地方是：寻找当前根节点的位置。\n",
     "    - 思路二：记录前序节点到中序的位置映射关系，再递归构造。时间复杂度是O(n)\n",
-    "    - [ ] 💡思路三：迭代法：[参考题解](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/solution/cong-qian-xu-yu-zhong-xu-bian-li-xu-lie-gou-zao-9/)\n",
+    "    - [X] 💡思路三：迭代法：[参考题解](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/solution/cong-qian-xu-yu-zhong-xu-bian-li-xu-lie-gou-zao-9/)\n",
     "- [(medium)106Construct Binary Tree From Inorder And Postorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)\n",
     "    - 思路一：递归构造，借助hashmap减少复杂度。\n",
-    "    - [ ] 💡思路二：迭代法，类似于105的迭代法。\n",
+    "    - [X] 💡思路二：迭代法，类似于105的迭代法。\n",
     "- [(medium)889Construct Binary Tree From Preorder And Postorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/)。\n",
     "    - 思路一：递归构造+hashmap。关键在于：通过两个数组，确定根，左子树对应的数组，和右子树对应的数组。如何确定呢？在前序遍历中，左子树的根是前序遍历的第二个数字，在后序遍历中寻找该数字的位置，即可知道左子树有几个节点，然后从前序和后序中，截取左右子树对应的子段，递归求解。\n",
-    "    - [ ] 💡思路二：迭代法，[参考题解的回复](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/solution/gen-ju-qian-xu-he-hou-xu-bian-li-gou-zao-er-cha-sh/)\n",
+    "    - [X] 💡思路二：迭代法，[参考题解的回复](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/solution/gen-ju-qian-xu-he-hou-xu-bian-li-gou-zao-er-cha-sh/)\n",
     "    "
    ]
   },
@@ -633,6 +632,7 @@
     "\n",
     "\n",
     "# 思路二：先建立前序到中序的下标对应关系，时间复杂度是O(n)\n",
+    "# Time: 120ms, Space: 88MB\n",
     "class Solution:\n",
     "    def recurseBuild(self, preorder, inorder, pre2in, diff):\n",
     "        if not preorder:\n",
@@ -1276,8 +1276,8 @@
     "\n",
     "\n",
     "- [(hard)987Vertical Order Traversal of a Binary Tree](https://leetcode.cn/problems/vertical-order-traversal-of-a-binary-tree/)\n",
-    "- [(hard)剑指offer37 序列化二叉树](https://leetcode.cn/problems/xu-lie-hua-er-cha-shu-lcof/)\n",
-    "- [(medium)面试题04.06后继者](https://leetcode.cn/problems/successor-lcci/)"
+    "    - 思路：BFS获取所有点的col，row和val信息，排序：先按col，再按row，最后按val。按要求保存排序结果。时间复杂度：O(nlogn)，其中BFS O(n)，排序O(nlogn)，保存结果O(n)；空间复杂度O(n)。这种思路还有很多变形：比如DFS保存信息，堆进行排序，等等。\n",
+    "- [(medium)面试题04.06后继者](https://leetcode.cn/problems/successor-lcci/)。在二叉搜索树上找第一个大于目标值的节点。也就是在BST上做搜索。和当前节点比较，然后决定进入左子树还是右子树，用一个全局变量保存当前找到的最小的大于目标值的节点。"
    ]
   },
   {
@@ -1471,10 +1471,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 1367两种思路复杂度比较\n",
     "# example\n",
@@ -1760,11 +1758,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 987\n",
+    "import functools\n",
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.colrowval = []\n",
+    "        \n",
+    "    def BFS(self, head, cur_row, cur_col):\n",
+    "        self.colrowval.append([cur_col, cur_row, head.val])\n",
+    "        if head.left:\n",
+    "            self.BFS(head.left, cur_row + 1, cur_col - 1)\n",
+    "        if head.right:\n",
+    "            self.BFS(head.right, cur_row + 1, cur_col + 1)\n",
+    "\n",
+    "    def verticalTraversal(self, root: TreeNode) -> List[List[int]]:\n",
+    "        self.BFS(root, 0, 0) # 保存col，row，和val，用于排序\n",
+    "        res = [[]]\n",
+    "        def cmp(x, y):\n",
+    "            if x[0] < y[0]:\n",
+    "                return -1\n",
+    "            elif x[0] > y[0]:\n",
+    "                return 1\n",
+    "            else:\n",
+    "                if x[1] < y[1]:\n",
+    "                    return -1\n",
+    "                elif x[1] > y[1]:\n",
+    "                    return 1\n",
+    "                else:\n",
+    "                    if x[2] < y[2]:\n",
+    "                        return -1\n",
+    "                    elif x[2] > y[2]:\n",
+    "                        return 1\n",
+    "            return 0\n",
+    "\n",
+    "        self.colrowval.sort(key=functools.cmp_to_key(cmp))\n",
+    "        last_col = self.colrowval[0][0]\n",
+    "        for item in self.colrowval:\n",
+    "            if item[0] != last_col:\n",
+    "                last_col = item[0]\n",
+    "                res.append([])\n",
+    "            res[-1].append(item[2])\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 面试题0406\n",
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.sofar_bigger = None # 用一个全局变量保存当前找到的最小的大于目标值的节点。\n",
+    "        \n",
+    "    def inorderSuccessor(self, root: TreeNode, p: TreeNode) -> TreeNode:\n",
+    "        if not root:\n",
+    "            return self.sofar_bigger\n",
+    "        if root.val <= p.val: # 当前值小于等于目标值，去搜索右子树\n",
+    "            if not root.right: # early stop, not necessary\n",
+    "                return self.sofar_bigger\n",
+    "            return self.inorderSuccessor(root.right, p)\n",
+    "\n",
+    "        if not self.sofar_bigger or self.sofar_bigger.val > root.val: # 根据当前值与全局变量间的关系，更新全局变量\n",
+    "            self.sofar_bigger = root\n",
+    "        # 当前值大于目标值，去搜索左子树\n",
+    "        if not root.left: # early stop, not necessary\n",
+    "            return self.sofar_bigger\n",
+    "        return self.inorderSuccessor(root.left, p)\n",
+    "    \n",
+    "# 化简版：其实并不需要一个全局变量，因为BST有一个特性是：左子树的所有节点都小于根，所以上述解法中，如果root.val大于p，self.sofar_bigger一定是当前root的一个父节点，其值比定大于root.val\n",
+    "class Solution:\n",
+    "    def inorderSuccessor(self, root: TreeNode, p: TreeNode) -> TreeNode:\n",
+    "        if not root:\n",
+    "            return None\n",
+    "        if root.val <= p.val:\n",
+    "            return self.inorderSuccessor(root.right, p)\n",
+    "        left_ans = self.inorderSuccessor(root.left, p)\n",
+    "        return left_ans if left_ans else root"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 迭代方法专项\n",
-    "\n"
+    "\n",
+    "\n",
+    "- [(medium)105Construct Binary Tree From Preorder And Inorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)\n",
+    "    - [X] 🌟💡思路三：迭代法：[参考题解](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/solution/cong-qian-xu-yu-zhong-xu-bian-li-xu-lie-gou-zao-9/)\n",
+    "    整体想法是：遍历前序中的元素，\n",
+    "        1. 对于当前元素，判断是栈顶元素的左节点还是右节点。思考如何判断呢？假如只有前序遍历，我们显然无法知道是左节点还是右节点。但是有了中序的话，假如说是右节点，那么中序中的相应位置，必然是其父节点的值；反之，如果不是，就证明是左节点。\n",
+    "        2. 如果是左节点要怎么处理？将栈顶元素的left设置为当前节点，将当前节点入栈\n",
+    "        3. 如果是右节点要怎么处理？沿着中序找下去，不停出栈，直到找到它的父节点，将其设置为父节点的右节点。父节点出栈，当前节点入栈。\n",
+    "        栈中存放的是，等待寻找右节点的节点。\n",
+    "    \n",
+    "- [(medium)106Construct Binary Tree From Inorder And Postorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)\n",
+    "    - [X] 💡思路二：迭代法，类似于105的迭代法。\n",
+    "    依然是思考，如果只有后序遍历，**从后向前看**，我们怎么知道第二个节点是第一个节点的左边还是右边呢？显然不可以，需要借助中序。\n",
+    "        - 如果第二个节点在第一个节点的左边，那么在中序中的第一个节点必然得和后序的第一个相等；反之，如果不相等，第二个节点就在第一个节点的右边。其他推理过程，同105.\n",
+    "- [(medium)889Construct Binary Tree From Preorder And Postorder Traversal](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/)。\n",
+    "    - [X] 💡思路二：迭代法，[参考题解的回复](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/solution/gen-ju-qian-xu-he-hou-xu-bian-li-gou-zao-er-cha-sh/)\n",
+    "        （注意：只从前序和后序中进行回复，答案不唯一）\n",
+    "        栈中存放的是没有被完全访问的节点：意思是如果存在右子树，右子树还没被访问；如果不存在，则它自己还没被访问。\n",
+    "        如何确定一个节点是否被完全访问了呢？后序遍历！从前向后读后序遍历的结果，当前读到的节点就表示已经被完全访问了。\n",
+    "        整体思路是：遍历前序中的每个元素，把它加到栈中。然后检查栈顶元素和后序遍历的当前位置是否相同，如果相同就出栈，并将出栈元素设为新栈顶的左或右子节点。循环直到不相同。至于设置为左还是右，如果左为空，就设置为左；否则设置为右。\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "比较这三道题：\n",
+    "- [X] 什么时候入栈？按遍历顺序，新节点总是入栈\n",
+    "- [X] 什么时候出栈？\n",
+    "    - 105: 栈顶元素，等于中序当前的元素就出栈\n",
+    "    - 106: 栈顶元素，等于中序当前的元素就出栈\n",
+    "    - 889: 栈顶元素，等于后序当前的元素就出栈\n",
+    "- [X] 什么时候进行左子树的设置？什么时候进行右子树的设置？\n",
+    "    - 105: \n",
+    "        - 左子树：如果新节点是左节点，就在入栈前，将其设置为栈顶的左；\n",
+    "        - 右子树：如果新节点是右节点，就在入栈前，先进行寻找父节点的出栈操作，找到之后将其设置为旧栈顶的右；\n",
+    "    - 106:和105左右对称\n",
+    "    - 889: 在出栈过程中设置。待设置的元素，是上一个栈顶，根据新栈顶的左是否已被设置，将其设置为左或者右。\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 105 Time 120ms->40ms, beat 97.09%; Space: 88MB->15.6MB, beat 97.71%\n",
+    "class Solution:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> TreeNode:\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        stack = [root]\n",
+    "        inorder_id = 0\n",
+    "        for i in range(1, len(preorder)):\n",
+    "            cur_node = TreeNode(preorder[i])\n",
+    "            # 对于当前元素，判断是栈顶元素的左节点还是右节点。\n",
+    "            # 如果是左节点，就入栈，如果是右节点，就将栈顶元素出栈，找到其父节点，设置为该节点的右节点，将新的节点入栈\n",
+    "            # 如何判断呢？如果前一个元素是当前中序遍历的头一个值，则为右节点，否则为左节点\n",
+    "            if stack[-1].val == inorder[inorder_id]:\n",
+    "                # 是右节点\n",
+    "                while stack and stack[-1].val == inorder[inorder_id]:\n",
+    "                    father = stack.pop()\n",
+    "                    inorder_id += 1\n",
+    "                father.right = cur_node\n",
+    "                stack.append(cur_node)\n",
+    "            else:\n",
+    "                # 是左节点\n",
+    "                stack[-1].left = cur_node\n",
+    "                stack.append(cur_node)\n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 106 Time 128ms->48ms, beat 86.22%; Space: 88MB->16MB, beat 98.44%\n",
+    "class Solution:\n",
+    "    def buildTree(self, inorder: List[int], postorder: List[int]) -> TreeNode:\n",
+    "        root = TreeNode(postorder[-1])\n",
+    "        stack = [root]\n",
+    "        in_id = len(inorder) - 1\n",
+    "        for i in range(len(postorder)-2, -1, -1):\n",
+    "            # 判断当前节点是栈顶节点的左节点还是右节点。栈中存放的是等待寻找左节点的节点\n",
+    "            # 如果是右节点，入栈；\n",
+    "            # 如果是左节点，就找到它的父节点，将其设置为父节点的左节点；父节点出栈，该节点入栈\n",
+    "            # 如何判断：如果栈顶元素等于inorder当前所指的值，则为左节点；否则为右节点\n",
+    "            cur_node = TreeNode(postorder[i])\n",
+    "            if stack[-1].val != inorder[in_id]:\n",
+    "                stack[-1].right = cur_node\n",
+    "                stack.append(cur_node)\n",
+    "            else:\n",
+    "                while stack and stack[-1].val == inorder[in_id]:\n",
+    "                    father = stack.pop()\n",
+    "                    in_id -= 1\n",
+    "                father.left = cur_node\n",
+    "                stack.append(cur_node)\n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 889\n",
+    "class Solution:\n",
+    "    def constructFromPrePost(self, preorder: List[int], postorder: List[int]) -> TreeNode:\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        post_id = 0\n",
+    "        stack = [root] # in the stack, save the nodes have not been completely visited.\n",
+    "        for i in range(1, len(preorder)):\n",
+    "            cur_node = TreeNode(preorder[i])\n",
+    "            stack.append(cur_node)\n",
+    "            while stack and stack[-1].val == postorder[post_id]:\n",
+    "                to_add_node = stack.pop()\n",
+    "                post_id += 1\n",
+    "                if stack:\n",
+    "                    if stack[-1].left is None:\n",
+    "                        stack[-1].left = to_add_node\n",
+    "                    else:\n",
+    "                        stack[-1].right = to_add_node\n",
+    "        return root"
    ]
   },
   {
@@ -1793,13 +2000,6 @@
     "- 弄清对遍历中的每个元素做什么操作\n",
     "- 弄清栈中的元素等待做什么？什么情况入栈，什么情况出栈？"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
