--- a/栈和队列（二：队列）.ipynb
+++ b/栈和队列（二：队列）.ipynb
@@ -219,8 +219,37 @@
     "- 链表\n",
     "\n",
     "\n",
-    "- [(medium)341扁平化嵌套列表迭代器](https://leetcode.cn/problems/flatten-nested-list-iterator/)"
+    "- [(medium)341扁平化嵌套列表迭代器](https://leetcode.cn/problems/flatten-nested-list-iterator/)\n",
+    "\n",
+    "\n",
+    "## 单调队列\n",
+    "\n",
+    "主要用于解决下面场景：\n",
+    "给一个数组window，已知其最值为A\n",
+    "- 如果给window添加一个数B，那么比较B和A，就可以立即得出新的最值。\n",
+    "- 但如果从window中减少一个数，就不能直接得到最值了，因为如果减少的这个数恰好是A，就要遍历window中的所有元素重新寻找新的最值。\n",
+    "\n",
+    "- 堆可以维护大小顺序，但是无法维护元素进入的时间顺序\n",
+    "- 单调队列：既能维护队列中所有元素的最值，又能维护“先进先出”的时间顺序。\n",
+    "\n",
+    "主要用来辅助解决**滑动窗口**相关的问题。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 经验总结\n",
+    "\n",
+    "队列主要用在BFS算法上。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
