--- a/树和图（一：树）.ipynb
+++ b/树和图（一：树）.ipynb
@@ -279,6 +279,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "void traverse(TreeNode root) {\n",
+    "    // 前序遍历代码\n",
+    "    traverse(root.left);\n",
+    "    // 中序遍历代码\n",
+    "    traverse(root.right);\n",
+    "    // 后序遍历代码\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# preorder recursion version\n",
     "class Solution:\n",
     "    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
@@ -1277,7 +1292,10 @@
     "\n",
     "- [(hard)987Vertical Order Traversal of a Binary Tree](https://leetcode.cn/problems/vertical-order-traversal-of-a-binary-tree/)\n",
     "    - 思路：BFS获取所有点的col，row和val信息，排序：先按col，再按row，最后按val。按要求保存排序结果。时间复杂度：O(nlogn)，其中BFS O(n)，排序O(nlogn)，保存结果O(n)；空间复杂度O(n)。这种思路还有很多变形：比如DFS保存信息，堆进行排序，等等。\n",
-    "- [(medium)面试题04.06后继者](https://leetcode.cn/problems/successor-lcci/)。在二叉搜索树上找第一个大于目标值的节点。也就是在BST上做搜索。和当前节点比较，然后决定进入左子树还是右子树，用一个全局变量保存当前找到的最小的大于目标值的节点。"
+    "- [(medium)面试题04.06后继者](https://leetcode.cn/problems/successor-lcci/)。在二叉搜索树上找第一个大于目标值的节点。也就是在BST上做搜索。和当前节点比较，然后决定进入左子树还是右子树，用一个全局变量保存当前找到的最小的大于目标值的节点。\n",
+    "\n",
+    "- [(medium)652 Find Duplicate Subtrees](https://leetcode.cn/problems/find-duplicate-subtrees/)\n",
+    "    - 思路：后序位置DFS+序列化。序列化来描述一棵树，否则直接用Node的话，无法判断重复。内容相同的树，也会被判断为不一样的。"
    ]
   },
   {
@@ -1841,6 +1859,35 @@
     "            return self.inorderSuccessor(root.right, p)\n",
     "        left_ans = self.inorderSuccessor(root.left, p)\n",
     "        return left_ans if left_ans else root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 652\n",
+    "class Solution:\n",
+    "    def traverse(self, head):\n",
+    "        if head is None:\n",
+    "            return \"#\"\n",
+    "        left_code = self.traverse(head.left)\n",
+    "        right_code = self.traverse(head.right)\n",
+    "        \n",
+    "        cur_code = str(head.val) + \",\" + left_code + \",\" + right_code # 后序位置序列化\n",
+    "        # print(\"Traverse for {} and get {}\".format(head, cur_code))\n",
+    "        self.nodecnt[cur_code] = self.nodecnt.get(cur_code, 0) + 1\n",
+    "        # print(\"Nodecnt: \", self.nodecnt)\n",
+    "        if self.nodecnt[cur_code] == 2:\n",
+    "            self.ans.append(head)\n",
+    "        return cur_code\n",
+    "\n",
+    "    def findDuplicateSubtrees(self, root: Optional[TreeNode]) -> List[Optional[TreeNode]]:\n",
+    "        self.ans = []\n",
+    "        self.nodecnt = {}\n",
+    "        self.traverse(root)\n",
+    "        return self.ans\n"
    ]
   },
   {
