--- a/树和图（二：树的进阶）.ipynb
+++ b/树和图（二：树的进阶）.ipynb
@@ -433,7 +433,7 @@
     "    - 思路一：最直接：双层循环。对于每一个数，去到它的后面，数有多少个数小于它。时间复杂度是O(n^2)的。超时。\n",
     "    - 思路二：逆序遍历+二分查找+排序。因为要对右边进行计数，所以可以逆序遍历，从最右边开始。遍历到当前元素时，希望查到在已经遍历的元素中，有多少小于它的数，这个数就是这个元素对应的结果。可以使用二分查找，然后把这个数插入进去。\n",
     "    - 思路二可以直接使用python的SortedList进行求解，[参考题解](https://leetcode.cn/problems/count-of-smaller-numbers-after-self/solution/4chong-jie-fa-yi-wang-da-jin-pai-xu-shu-5vvds/)。\n",
-    "    - [ ] 💡待学习思路三：归并排序。先学习[例题](https://leetcode-cn.com/problems/shu-zu-zhong-de-ni-xu-dui-lcof/solution/4chong-jie-fa-yi-wang-da-jin-you-xu-shu-0nia5/)\n",
+    "    - [X] 💡待学习思路三：归并排序。先学习[例题](https://leetcode-cn.com/problems/shu-zu-zhong-de-ni-xu-dui-lcof/solution/4chong-jie-fa-yi-wang-da-jin-you-xu-shu-0nia5/)，见小专题。\n",
     "    - 思路四：树状数组。使用树状数组的话，最好是能事先明确这棵树的所有叶子节点，然后建树。\n",
     "        - 这里如何建树呢？不是直接在原来的数组nums上建树，而是将元素的值作为下标，每个位置存放这个值当前出现的次数。\n",
     "        - 如何使用树状数组来求想要的结果呢？依然逆序遍历，求一个数右边比它小的个数，可以等价于查询比它小的数的前缀和。\n",
