--- a/二分搜索.ipynb
+++ b/二分搜索.ipynb
@@ -35,6 +35,8 @@
     "\n",
     "「使……最大值尽可能小」是二分搜索题目常见的问法。\n",
     "\n",
+    "- 分析二分查找的一个技巧是：不要出现 else，而是把所有情况用 else if 写清楚，这样可以清楚地展现所有细节。\n",
+    "- 另外提前说明一下，计算 mid 时需要防止溢出，代码中 `left + (right - left) // 2` 就和 `(left + right) // 2` 的结果相同，但是有效防止了 left 和 right 太大，直接相加导致溢出的情况。\n",
     "\n",
     "思路：\n",
     "1. 确定范围，最大值和最小值\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,22 @@
     "            left = mid # left代表小于target的值\n",
     "        else:\n",
     "            return mid\n",
-    "    rturn -1\n",
+    "    return -1\n",
+    "\n",
+    "def BinarySearchV2(nums, target):\n",
+    "    if len(nums) < 1:\n",
+    "        return -1\n",
+    "    left = 0\n",
+    "    right = len(nums)\n",
+    "    while left < right: # 退出条件是窗口里只有一个数\n",
+    "        mid = (right + left) // 2 \n",
+    "        if nums[mid] < target:\n",
+    "            left = mid + 1 # left代表小于target的值\n",
+    "        else:\n",
+    "            right = mid\n",
+    "    if left == len(nums) or nums[left] != target:\n",
+    "        return -1\n",
+    "    return left\n",
     "\n",
     "# 左闭右闭\n",
     "def BinarySearchClosed(nums, target):\n",
@@ -166,22 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "8\n"
+      "12\n",
+      "12\n",
+      "12\n"
      ]
     }
    ],
    "source": [
     "nums = [1,1,1,3,4,5,5,5,6,6,6,7,8]\n",
-    "target = 6\n",
+    "target = 8\n",
     "print(BinarySearch(nums, target))\n",
+    "print(BinarySearchV2(nums, target))\n",
     "print(BinarySearchClosed(nums, target))"
    ]
   },
@@ -213,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,19 +240,17 @@
     "def BinarySearch(nums, target):\n",
     "    if len(nums) < 1:\n",
     "        return -1\n",
-    "    if nums[-1] == target: # 单独处理末位与target相等的情况\n",
-    "        return len(nums)-1\n",
     "    left = 0\n",
     "    right = len(nums)\n",
-    "    while right-left > 1: # 退出条件是窗口里只有一个数\n",
-    "        mid = (right + left) // 2 \n",
-    "        if nums[mid] < target or (nums[mid] == target and nums[mid+1]<=target):\n",
-    "            left = mid + 1# left代表小于或等于判定条件的位置\n",
-    "        elif nums[mid] > target:\n",
-    "            right = mid + 1 # right代表 非 第一个大于target的值\n",
+    "    while left < right: # 退出条件是窗口里只有一个数\n",
+    "        mid = (right + left) // 2\n",
+    "        if nums[mid] > target:\n",
+    "            right = mid\n",
     "        else:\n",
-    "            return mid\n",
-    "    rturn -1\n",
+    "            left = mid + 1\n",
+    "    if nums[left-1] != target:\n",
+    "        return -1\n",
+    "    return left - 1\n",
     "\n",
     "# 左闭右闭\n",
     "def BinarySearchClosed(nums, target):\n",
@@ -256,21 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "10\n"
+      "3\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "nums = [1,1,1,3,4,5,5,5,6,6,6,7,8]\n",
-    "target = 6\n",
+    "target = 3\n",
     "print(BinarySearch(nums, target))\n",
     "print(BinarySearchClosed(nums, target))"
    ]
@@ -298,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +335,21 @@
     "            right = mid \n",
     "        else:\n",
     "            return mid\n",
-    "    rturn -1\n",
+    "    return -1\n",
+    "\n",
+    "def BinarySearchV2(nums, target):\n",
+    "    if not nums:\n",
+    "        return -1\n",
+    "    l = 0\n",
+    "    r = len(nums)\n",
+    "    while l < r:\n",
+    "        mid = l + (r-l)//2\n",
+    "        if nums[mid] >= target:\n",
+    "            r = mid\n",
+    "        else:\n",
+    "            l = mid + 1\n",
+    "    return r\n",
+    "    \n",
     "\n",
     "# 左闭右闭\n",
     "def BinarySearchClosed(nums, target):\n",
@@ -341,22 +372,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n"
+      "3\n",
+      "3\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "nums = [1,1,1,3,5,5,5,5,6,6,6,7,8]\n",
-    "target = 4\n",
+    "target = 2\n",
     "print(BinarySearch(nums, target))\n",
+    "print(BinarySearchV2(nums, target))\n",
     "print(BinarySearchClosed(nums, target))"
    ]
   },
@@ -445,6 +478,108 @@
     "print(BinarySearch(nums, target))\n",
     "print(BinarySearchClosed(nums, target))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 二分搜索问题的泛化\n",
+    "\n",
+    "应用：在具体的算法问题中，常用到的是「搜索左侧边界」和「搜索右侧边界」这两种场景，很少有让你单独「搜索一个元素」。\n",
+    "\n",
+    "来自[labuladong](https://labuladong.github.io/algo/2/18/28/)\n",
+    "\n",
+    "搜索左边界和右边界的模板在下面，两个算法过程的区别是：\n",
+    "- 返回值：搜索左边界，返回left；搜索右边界，返回left-1\n",
+    "- 当找到target时，搜索左边界，把right赋值为mid；搜索右边界，把left赋值为mid+1\n",
+    "\n",
+    "\n",
+    "首先，你要从题目中抽象出一个自变量 `x`，一个关于 `x` 的函数 `f(x)`，以及一个目标值 target。同时，x, f(x), target 还要满足以下条件：\n",
+    "\n",
+    "1. `f(x)` 必须是在 `x` 上的单调函数（单调增单调减都可以）。\n",
+    "\n",
+    "2. 题目是让你计算满足约束条件 `f(x) == target` 时的 `x` 的值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 搜索左边界\n",
+    "def left_bound(nums, target):\n",
+    "    if not nums:\n",
+    "        return -1\n",
+    "    left = 0\n",
+    "    right = len(nums)\n",
+    "    \n",
+    "    while left < right:\n",
+    "        mid = left + (right - left) // 2\n",
+    "        if nums[mid] == target: \n",
+    "            # 当找到 target 时，收缩右侧边界\n",
+    "            right = mid\n",
+    "        elif nums[mid] < target:\n",
+    "            left = mid + 1\n",
+    "        else # if nums[mid] > target:\n",
+    "            right = mid\n",
+    "    return left\n",
+    "\n",
+    "# 搜索右边界\n",
+    "def right_bound(nums, target):\n",
+    "    if not nums:\n",
+    "        return -1\n",
+    "    left = 0\n",
+    "    right = len(nums)\n",
+    "    \n",
+    "    while left < right:\n",
+    "        mid = left + (right - left) // 2\n",
+    "        if nums[mid] == target: \n",
+    "            # 当找到 target 时，收缩左侧边界\n",
+    "            left = mid + 1\n",
+    "        elif nums[mid] < target:\n",
+    "            left = mid + 1\n",
+    "        else # if nums[mid] > target:\n",
+    "            right = mid\n",
+    "    return left - 1\n",
+    "\n",
+    "# 泛化的二分搜索问题的模板\n",
+    "\n",
+    "\n",
+    "# 函数 f 是关于自变量 x 的单调函数\n",
+    "def f(x):\n",
+    "    # ...\n",
+    "    \n",
+    "\n",
+    "# 主函数，在 f(x) == target 的约束下求 x 的最值\n",
+    "def solution(nums, target):\n",
+    "    if not nums:\n",
+    "        return -1\n",
+    "    # 问自己：自变量 x 的最小值是多少？\n",
+    "    left = ...\n",
+    "    # 问自己：自变量 x 的最大值是多少？\n",
+    "    right = ... + 1 # 这里取开区间\n",
+    "    \n",
+    "    while left < right:\n",
+    "        mid = left + (right - left) // 2\n",
+    "        if f(mid) == target: \n",
+    "            # 问自己：题目是求左边界还是右边界？\n",
+    "            # ...\n",
+    "        elif f(mid) < target:\n",
+    "            # 问自己：怎么让 f(x) 大一点？\n",
+    "            # ...\n",
+    "        else: # if (f(mid) > target) {\n",
+    "            # 问自己：怎么让 f(x) 小一点？\n",
+    "            # ...\n",
+    "    return left # or left - 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
