--- a/模板汇总.ipynb
+++ b/模板汇总.ipynb
@@ -492,7 +492,45 @@
    "metadata": {},
    "source": [
     "# 图论\n",
-    "\n"
+    "\n",
+    "## 最小生成树\n",
+    "\n",
+    "- Kruskal算法：一开始把所有的边排序，然后从权重最小的边开始挑选属于最小生成树的边（用UF来保证），组建最小生成树\n",
+    "    - UF并查集：findRoot稍加改动，可以将复杂度优化到O（1）的\n",
+    "- Prim算法：（Kruskal动态版本，优先级队列，切分定理）从一个起点的切分开始，执行类似BFS的逻辑，每次把边的（出）端点不在最小生成树里的边，加入到最小生成树中，长出一棵树\n",
+    "\n",
+    "## 最短路径权重\n",
+    "\n",
+    "Dijkstra算法：输入一幅图和一个起点，返回一个记录最短路径权重的数组\n",
+    "- Dijkstra使用优先级队列，主要是为了效率上的优化，类似一种贪心算法的思路。\n",
+    "- 如果终点明确的情况下，优化：第一次遇到终点的时候，就结束遍历。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dijkstra\n",
+    "import heapq\n",
+    "def Dijkstra(start, end, graph):\n",
+    "    pq = []\n",
+    "    distTo = {start: 0} # 千万不要忘了start的权重记录。\n",
+    "    \n",
+    "    for end_node, edge_weight in graph[start]:\n",
+    "        distTo[end_node] = edge_weight\n",
+    "        heapq.heappush(pq, (edge_weight, end_node))\n",
+    "    while pq:\n",
+    "        edge_weight, end_node = heapq.heappop(pq)\n",
+    "        if end_node == end:\n",
+    "            return distTo[end_node]\n",
+    "        for neigh, weight in graph[end_node]:\n",
+    "            if neigh not in distTo or distTo[neigh] > distTo[end_node] + weight:\n",
+    "                distTo[neigh] = distTo[end_node] + weight\n",
+    "                heapq.heappush(pq, (weight, neigh))\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -501,7 +539,34 @@
    "source": [
     "# 回溯算法\n",
     "\n",
-    "回溯算法就是N叉树的前后序遍历问题。"
+    "回溯算法就是N叉树的前后序遍历问题。\n",
+    "\n",
+    "不像动态规划存在重叠子问题的优化，回溯算法就是纯暴力穷举，复杂度一般都很高。\n",
+    "\n",
+    "- 写回溯算法时，需要维护走过的**路径**，和当前可以做的**选择列表**，当触发**结束条件**时，将**路径**记入结果集。\n",
+    "- 有的时候，不需要得到所有合法的答案，只想要一个答案，怎么办？在适当的地方返回，中断穷举。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backtrack\n",
+    "result = []\n",
+    "def backtrack(path, options):\n",
+    "    if satisfyEnd(path):\n",
+    "        result.add(path)\n",
+    "        ...\n",
+    "        \n",
+    "    for op in options:\n",
+    "        makeOption(op)\n",
+    "        # update path and options\n",
+    "        backtrack(path, options)\n",
+    "        # update path and options\n",
+    "        revertOption(op)\n",
+    "        "
    ]
   },
   {
